showifcfg (0.3.0) unstable; urgency=low

  * Initial Release.

 -- Bernd Stramm <bernd@unknown>  Tue, 16 Aug 2011 09:16:16 -0400